--- a/toolkits/sugar/src/scss/helper/class/_position.scss
+++ b/toolkits/sugar/src/scss/helper/class/_position.scss
@@ -1,4 +1,4 @@
-@mixin classes-helper-position() {
+@mixin helper-position-classes() {
   @if class-match-namespace('sugar.helper.position.relative') {
     /**
     * @name 		#{sel(relative)}
