--- a/toolkits/sugar/src/scss/helper/class/_block.scss
+++ b/toolkits/sugar/src/scss/helper/class/_block.scss
@@ -1,4 +1,19 @@
-@mixin classes-helper-block() {
+/**
+ * @name              helper-block-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "block" related helper classes.
+ *
+ * @classname       #{sel(block-center)}          Make an element a block and center it
+ *
+ * @example         scss
+ * @include Sugar.helper-block-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
+@mixin helper-block-classes() {
   @if class-match-namespace('sugar.helper.block.align.center') {
     /**
       * @name 		#{sel(block-center)}
@@ -7,6 +22,8 @@
       * @type        class
       *
       * Set the element to as ```display:block``` and center it
+      *
+      * @classname       #{sel(block-center)}          Make an element a block and center it
       *
       * @example 	html
       * <div class="#{sel(block-center)} #{sel(bg-primary)}" style="width:100px;">
