--- a/toolkits/sugar/src/scss/helper/class/_display.scss
+++ b/toolkits/sugar/src/scss/helper/class/_display.scss
@@ -1,4 +1,28 @@
-@mixin classes-helper-display() {
+/**
+ * @name              helper-display-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "display" related helper classes.
+ *
+ * @classname     #{sel(block)}         Make an element display block
+ * @classname     #{sel(inline)}         Make an element display inline
+ * @classname     #{sel(inline-block)}         Make an element display inline-block
+ * @classname     #{sel(show)}           Make an element visible (display block)
+ * @classname     #{sel(show-inline)}           Make an element visible inline (display inline block)
+ * @classname     #{sel(hidden)}           Make an element invisible (display none)
+ * @classname     #{sel(hide)}           Make an element invisible (display none)
+ * @classname     #{sel(visible)}           Make an element visible (visibility visible)
+ * @classname     #{sel(invisible)}           Make an element invisible (visibility hidden)
+ * @classname     #{sel(visually-hidden)}           Make an element visually hidden
+ *
+ * @example         scss
+ * @include Sugar.helper-display-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
+@mixin helper-display-classes() {
   @if class-match-namespace('sugar.helper.display.block') {
     /**
     * @name 		#{sel(block)}
@@ -7,6 +31,8 @@
     * @type        class
     *
     * Display the element as ```block```
+    *
+    * @classname     #{sel(block)}         Make an element display block
     *
     * @example 	html
     * <div class="#{sel(block)}">
@@ -29,6 +55,8 @@
     *
     * Display the element as ```inline```
     *
+    * @classname     #{sel(inline)}         Make an element display inline
+    *
     * @example 	html
     * <div class="#{sel(inline)}">
     * 	I'm displayed as inline
@@ -49,6 +77,8 @@
     * @type        class
     *
     * Display the element as ```inline-block```
+    *
+    * @classname     #{sel(inline-block)}         Make an element display inline-block
     *
     * @example 	html
     * <div class="#{sel(inline-block)}">
@@ -71,6 +101,8 @@
     *
     * Display the element as ```block```
     *
+    * @classname     #{sel(show)}           Make an element visible (display block)
+    *
     * @example 	html
     * <div class="#{sel(show)}">
     * 	I'm displayed
@@ -91,6 +123,8 @@
     * @type        class
     *
     * Display the element as ```inline-block```
+    *
+    * @classname     #{sel(show-inline)}           Make an element visible inline (display inline block)
     *
     * @example 	html
     * <div class="#{sel(show-inline)}">
@@ -113,6 +147,8 @@
     *
     * Hide the element by setting the display to ```none```
     *
+    * @classname     #{sel(hidden)}           Make an element invisible (display none)
+    *
     * @example 	html
     * <div class="#{sel(hidden)}">
     * 	I'm hidden
@@ -133,6 +169,8 @@
     * @type        class
     *
     * Hide the element by setting the display to ```none```
+    *
+    * @classname     #{sel(hide)}           Make an element invisible (display none)
     *
     * @example 	html
     * <div class="#{sel(hide)}">
@@ -155,6 +193,8 @@
     *
     * Display the element by setting the visibility to ```visible```
     *
+    * @classname     #{sel(visible)}           Make an element visible (visibility visible)
+    *
     * @example 	html
     * <div class="#{sel(visible)}">
     * 	I'm visible
@@ -175,6 +215,8 @@
     * @type        class
     *
     * Display the element by setting the visibility to ```hidden```
+    *
+    * @classname     #{sel(invisible)}           Make an element invisible (visibility hidden)
     *
     * @example 	html
     * <div class="#{sel(invisible)}">
@@ -197,6 +239,8 @@
     *
     * Hide the element from display but not for SEO.
     * This class use some tricks to make the element dissapear without using some ```display:none;```, etc...
+    *
+    * @classname     #{sel(visually-hidden)}           Make an element visually hidden
     *
     * @example 	html
     * <div class="#{sel(visually-hidden)}">
