--- a/toolkits/sugar/src/scss/helper/class/_flex.scss
+++ b/toolkits/sugar/src/scss/helper/class/_flex.scss
@@ -1,4 +1,39 @@
-@mixin classes-helper-flex() {
+/**
+ * @name              helper-flex-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "flex" related helper classes.
+ *
+ * @classname     #{sel(flex)}       Make an element flex
+ * @classname     #{sel(flex-inline)}       Make an element flex-inline
+ * @classname     #{sel(flex-justify-start)}       Apply the property ```justify-content``` to **start**
+ * @classname     #{sel(flex-justify-end)}       Apply the property ```justify-content``` to **end**
+ * @classname     #{sel(flex-justify-center)}       Apply the property ```justify-content``` to **center**
+ * @classname     #{sel(flex-justify-between)}       Apply the property ```justify-content``` to **between**
+ * @classname     #{sel(flex-justify-around)}       Apply the property ```justify-content``` to **around**
+ * @classname     #{sel(flex-align-start)}       Apply the property ```align-items``` to **flex-start**
+ * @classname     #{sel(flex-align-end)}       Apply the property ```align-items``` to **flex-end**
+ * @classname     #{sel(flex-align-center)}       Apply the property ```align-items``` to **flex-center**
+ * @classname     #{sel(flex-align-baseline)}       Apply the property ```align-items``` to **flex-baseline**
+ * @classname     #{sel(flex-align-stretch)}       Apply the property ```align-items``` to **flex-stretch**
+ * @classname     #{sel(flex-align-self-start)}       Apply the property ```align-self``` to **flex-start**
+ * @classname     #{sel(flex-align-self-end)}       Apply the property ```align-self``` to **flex-end**
+ * @classname     #{sel(flex-align-self-center)}       Apply the property ```align-self``` to **flex-center**
+ * @classname     #{sel(flex-align-self-baseline)}       Apply the property ```align-self``` to **flex-baseline**
+ * @classname     #{sel(flex-align-self-stretch)}       Apply the property ```align-self``` to **flex-stretch**
+ * @classname     #{sel(flex-nowrap)}       Apply the ```flex-wrap``` property to **nowrap**
+ * @classname     #{sel(flex-wrap)}       Apply the ```flex-wrap``` property to **wrap**
+ * @classname     #{sel(flex-wrap-reverse)}       Apply the ```flex-wrap``` property to **wrap-reverse**
+ * @classname     #{sel(flex-order-[index])}       Set the order on a specific flex item.
+ *
+ * @example         scss
+ * @include Sugar.helper-flex-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
+@mixin helper-flex-classes() {
   @if class-match-namespace('sugar.helper.flex') {
     /**
     * @name 		#{sel(flex)}
@@ -7,6 +42,8 @@
     * @type        class
     *
     * Apply the display flex styling to the element
+    *
+    * @classname     #{sel(flex)}       Make an element flex
     *
     * @example 	html
     * <div class="#{sel(flex)}">
@@ -30,6 +67,8 @@
     *
     * Apply the display flex-inline styling to the element
     *
+    * @classname     #{sel(flex-inline)}       Make an element flex-inline
+    *
     * @example 	html
     * <div class="#{sel(flex-inline)}">
     *   I'm in an element that has display flex-inline applied
@@ -51,6 +90,8 @@
     * @type        class
     *
     * Apply the property ```justify-content``` to **start**
+    *
+    * @classname     #{sel(flex-justify-start)}       Apply the property ```justify-content``` to **start**
     *
     * @example 	html
     * <div class="#{sel(flex-justify-start)}">
@@ -77,6 +118,8 @@
     *
     * Apply the property ```justify-content``` to **end**
     *
+    * @classname     #{sel(flex-justify-end)}       Apply the property ```justify-content``` to **end**
+    *
     * @example 	html
     * <div class="#{sel(flex-justify-end)}">
     *   <div>I will be aligned depending on the flex-justify-{side} parent class</div>
@@ -101,6 +144,8 @@
     * @type        class
     *
     * Apply the property ```justify-content``` to **center**
+    *
+    * @classname     #{sel(flex-justify-center)}       Apply the property ```justify-content``` to **center**
     *
     * @example 	html
     * <div class="#{sel(flex-justify-center)}">
@@ -127,6 +172,8 @@
     *
     * Apply the property ```justify-content``` to **space-between**
     *
+    * @classname     #{sel(flex-justify-between)}       Apply the property ```justify-content``` to **between**
+    *
     * @example 	html
     * <div class="#{sel(flex-justify-between)}">
     *   <div>I will be aligned depending on the flex-justify-{side} parent class</div>
@@ -151,6 +198,8 @@
     * @type        class
     *
     * Apply the property ```justify-content``` to **space-around**
+    *
+    * @classname     #{sel(flex-justify-around)}       Apply the property ```justify-content``` to **around**
     *
     * @example 	html
     * <div class="#{sel(flex-justify-around)}">
@@ -177,6 +226,8 @@
     *
     * Apply the property ```align-items``` to **flex-start**
     *
+    * @classname     #{sel(flex-align-start)}       Apply the property ```align-items``` to **flex-start**
+    *
     * @example 	html
     * <div class="#{sel(flex-align-start)}">
     *   <div>I will be aligned depending on the flex-align-{side} parent class</div>
@@ -201,6 +252,8 @@
     * @type        class
     *
     * Apply the property ```align-items``` to **flex-end**
+    *
+    * @classname     #{sel(flex-align-end)}       Apply the property ```align-items``` to **flex-end**
     *
     * @example 	html
     * <div class="#{sel(flex-align-end)}">
@@ -227,6 +280,8 @@
     *
     * Apply the property ```align-items``` to **center**
     *
+    * @classname     #{sel(flex-align-center)}       Apply the property ```align-items``` to **flex-center**
+    *
     * @example 	html
     * <div class="#{sel(flex-align-center)}">
     *   <div>I will be aligned depending on the flex-align-{side} parent class</div>
@@ -251,6 +306,8 @@
     * @type        class
     *
     * Apply the property ```align-items``` to **baseline**
+    *
+    * @classname     #{sel(flex-align-baseline)}       Apply the property ```align-items``` to **flex-baseline**
     *
     * @example 	html
     * <div class="#{sel(flex-align-baseline)}">
@@ -277,6 +334,8 @@
     *
     * Apply the property ```align-items``` to **stretch**
     *
+    * @classname     #{sel(flex-align-stretch)}       Apply the property ```align-items``` to **flex-stretch**
+    *
     * @example 	html
     * <div class="#{sel(flex-align-stretch)}">
     *   <div>I will be aligned depending on the flex-align-{side} parent class</div>
@@ -302,6 +361,8 @@
     *
     * Apply the property ```align-self``` to **flex-start**
     *
+    * @classname     #{sel(flex-align-self-start)}       Apply the property ```align-self``` to **flex-start**
+    *
     * @example 	html
     * <div class="#{sel(flex)}">
     *   <div>I'm a flex item</div>
@@ -325,6 +386,8 @@
     * @type        class
     *
     * Apply the property ```align-self``` to **flex-end**
+    *
+    * @classname     #{sel(flex-align-self-end)}       Apply the property ```align-self``` to **flex-end**
     *
     * @example 	html
     * <div class="#{sel(flex)}">
@@ -350,6 +413,8 @@
     *
     * Apply the property ```align-self``` to **flex-center**
     *
+    * @classname     #{sel(flex-align-self-center)}       Apply the property ```align-self``` to **flex-center**
+    *
     * @example 	html
     * <div class="#{sel(flex)}">
     *   <div>I'm a flex item</div>
@@ -373,6 +438,8 @@
     * @type        class
     *
     * Apply the property ```align-self``` to **flex-baseline**
+    *
+    * @classname     #{sel(flex-align-self-baseline)}       Apply the property ```align-self``` to **flex-baseline**
     *
     * @example 	html
     * <div class="#{sel(flex)}">
@@ -398,6 +465,8 @@
     *
     * Apply the property ```align-self``` to **flex-stretch**
     *
+    * @classname     #{sel(flex-align-self-stretch)}       Apply the property ```align-self``` to **flex-stretch**
+    *
     * @example 	html
     * <div class="#{sel(flex)}">
     *   <div>I'm a flex item</div>
@@ -421,6 +490,8 @@
     * @type        class
     *
     * Apply the ```flex-wrap``` property to **nowrap**
+    *
+    * @classname     #{sel(flex-nowrap)}       Apply the ```flex-wrap``` property to **nowrap**
     *
     * @example 	html
     * <div class="#{sel(flex-nowrap)}">
@@ -465,6 +536,8 @@
     *
     * Apply the ```flex-wrap``` property to **wrap**
     *
+    * @classname     #{sel(flex-wrap)}       Apply the ```flex-wrap``` property to **wrap**
+    *
     * @example 	html
     * <div class="#{sel(flex-wrap)}">
     *   <div>I'm a flex item</div>
@@ -508,6 +581,8 @@
     *
     * Apply the ```flex-wrap``` property to **wrap-reverse**
     *
+    * @classname     #{sel(flex-wrap-reverse)}       Apply the ```flex-wrap``` property to **wrap-reverse**
+    *
     * @example 	html
     * <div class="#{sel(flex-wrap-reverse)}">
     *   <div>I'm a flex item</div>
@@ -544,34 +619,36 @@
 
   @if class-match-namespace('sugar.helper.flex.order') {
     $orderCount: setting('helpers.flex.order-count');
-    /**
-    * @name 		#{sel(flex-order-#{i})}
-    * @namespace           sugar.scss.helper.class
-    * @class-namespace     sugar.helper.flex.order
-    * @type        class
-    *
-    * Set the order on a specific flex item.
-    * You will have <primary>#{$orderCount}</primary> available. This can be
-    * changed by updating the **config.scss.helpers.flex.order-count** configuration.
-    *
-    * @example 	html
-    * <div class="#{sel(flex)}">
-    *   <div>I'm a flex item 0</div>
-    *   <div>I'm a flex item 1</div>
-    *   <div>I'm a flex item 2</div>
-    *   <div>I'm a flex item 3</div>
-    *   <div class="#{sel(flex-order-1)}">I'm a flex item 4</div>
-    *   <div>I'm a flex item 5</div>
-    *   <div>I'm a flex item 6</div>
-    *   <div>I'm a flex item 7</div>
-    *   <div>I'm a flex item 8</div>
-    *   <div>I'm a flex item 9</div>
-    * </div>
-    *
-    * @since       2.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
     @for $i from 1 through $orderCount {
+      /**
+      * @name 		#{sel(flex-order-#{i})}
+      * @namespace           sugar.scss.helper.class
+      * @class-namespace     sugar.helper.flex.order
+      * @type        class
+      *
+      * Set the order on a specific flex item.
+      * You will have <primary>#{$orderCount}</primary> available. This can be
+      * changed by updating the **config.scss.helpers.flex.order-count** configuration.
+      *
+      * @classname     #{sel('flex-order-#{i}')}       Set the order on a specific flex item.
+      *
+      * @example 	html
+      * <div class="#{sel(flex)}">
+      *   <div>I'm a flex item 0</div>
+      *   <div>I'm a flex item 1</div>
+      *   <div>I'm a flex item 2</div>
+      *   <div>I'm a flex item 3</div>
+      *   <div class="#{sel(flex-order-1)}">I'm a flex item 4</div>
+      *   <div>I'm a flex item 5</div>
+      *   <div>I'm a flex item 6</div>
+      *   <div>I'm a flex item 7</div>
+      *   <div>I'm a flex item 8</div>
+      *   <div>I'm a flex item 9</div>
+      * </div>
+      *
+      * @since       2.0.0
+      * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+      */
       .#{sel(flex-order-#{$i})} {
         order: $i;
       }
